fix(client): nav logo awlays visible, menu bg now invisible until menu opened.

--- a/client/src/app/nav/nav.component.scss
+++ b/client/src/app/nav/nav.component.scss
@@ -75,7 +75,10 @@ nav {
 
   width: 100%;
   height: 100%;
-  animation: bg-close 0.7s forwards;
+
+  &.wasOpened {
+    animation: bg-close 0.7s forwards;
+  }
 
   &.open {
     animation: bg-open 0.7s forwards;
@@ -84,9 +87,6 @@ nav {
 }
 
 #home {
-
-  display: none;
-  opacity: 0;
 
   // Hide when menu open on phones
   @include phones {
